# unity_hid_input_demo

./: .gitignore  LICENSE  README.md
hid_device_firmware/: .gitignore  Cargo.toml  README.md
hid_device_firmware/.cargo/: config
hid_device_firmware/src/: gamepad_descriptor.rs  main.rs  terminal.rs
input_system_with_hid/: .gitignore
input_system_with_hid/Assets/: DisplayInputData.cs
input_system_with_hid/Assets/HIDConnector/: CustomHID.cs  InGameAction.cs  InGameAction.inputactions
input_system_with_hid/Assets/Scenes/: SampleScene.unity
input_system_with_hid/ProjectSettings/: ProjectSettings.asset
