[package]
name = "hid_device_firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
panic-halt = "0.2.0"

# collections without allocation
heapless = "0.8.0"

# Board Support Package for wio terminal
wio_terminal = "0.7.0"

# Display crate.
embedded-graphics = "0.7"

# USB HID
usb-device = "0.3.1"
usbd-hid = "0.7.0"
